14915
Implicit value of this type cannot be determined: Manifest[A[List]]. Type in REPL the following to reproduce:
{code}
Welcome to Scala version 2.8.0.r20552-b20100117020202 (Java HotSpot(TM) Client VM, Java 1.6.0_01).
...
import scala.reflect.Manifest

scala> def f[A[B[C]]](implicit m: Manifest[A[List]]) {}
f: [A[B[C]]](implicit m: scala.reflect.Manifest[A[List]])Unit

scala> class X[Y[Z]]
defined class X

scala> f[X]
<console>:8: error: could not find implicit value for parameter m: scala.reflect.Manifest[X[List]]
       f[X]
        ^
{code}
Expected result: implicit manifest value should have been found.
